# changelog-handler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test-build.yaml
changelog_handler/: __init__.py  __main__.py  _pattern.py  changelog.py  version.py
tests/: __init__.py  changeTest.py  changelogTest.py  commandTest.py  inlinelog.md  patternTest.py  testlog.md  versionTest.py
